# ols-cli

./: LICENSE  README.md  ols-cli-0.1.0.r8.g2c038d8-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: ci.yml  package-drift.yml  release.yml  weekly-rebuild.yml
src/ols_cli/: __init__.py  cli.py  client.py  config.py  openapi.py
src/ols_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_core.py  test_openapi.py
