[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ols-cli"
version = "0.1.0"
description = "Command-line interface for the EMBL-EBI OLS4 ontology API"
readme = "README.md"
requires-python = ">=3.13"
license = "0BSD"
authors = [
  { name = "ols-cli contributors" }
]
keywords = ["ontology", "ols", "ebi", "cli", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Utilities",
]
dependencies = [
]

[project.scripts]
ols = "ols_cli.cli:main"

[project.urls]
Homepage = "https://www.ebi.ac.uk/ols4/"
Documentation = "https://www.ebi.ac.uk/ols4/api-docs"
Source = "https://www.ebi.ac.uk/ols4/"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
